<resources>
    <string name="app_name">Teroka</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_logsign">Welcome</string>
    <string name="login_text">Log in</string>
    <string name="register_text">Don\'t have account? Create now</string>
    <string name="login">Log In Now</string>
    <string name="text_register">New User Register</string>
    <string name="enter_login_credentials">Enter Login Credentials</string>
    <string name="existing_user_login">Existing User Login</string>
    <string name="home_page">Home</string>
    <string name="todo">Mail button</string>
    <string name="hello_first_fragment">Hello</string>
    <string name="next">Next</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="new_user_register">New User? Register</string>
    <string name="login_message">You\'re back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="hello">Hello =)</string>
    <string name="username">Username</string>
    <string name="login_command">Already a member? Login</string>
    <string name="home">Home</string>
    <string name="reset">Reset</string>
    <string name="email">Email</string>
    <string name="explore">Explore</string>
    <string name="addbutton1">+ Add Trip</string>
    <string name="deletebutton1">- Delete Trip</string>


</resources>