<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFFA6"
    tools:context=".LogSign">

    <ImageView
        android:id="@+id/wave_logsign"
        tools:ignore="ContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave_logsign" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="249dp"
        android:layout_marginBottom="191dp"
        android:fontFamily="@font/lato"
        android:text="@string/welcome_logsign"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#C1FFD7"
        android:fontFamily="@font/lato"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#41444B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/create_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="48dp"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textColor="#795548"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />
</androidx.constraintlayout.widget.ConstraintLayout>